--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,27 @@
 title: "cheesecakecat"
 description: Blog
-baseurl: "" 
-url: "" 
+baseurl: ""
+url: ""
 
 # Build settings
 markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+
+# Pagination settings
+paginate: 5
+paginate_path: "/blog/page/:num/"
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
 
 # Theme settings
 show_excerpts: true
@@ -15,4 +30,4 @@ show_excerpts: true
 collections:
   posts:
     output: true
-    permalink: /blog/:year/:month/:day/:title/ 
+    permalink: /blog/:year/:month/:day/:title/
